--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Hangfire</h1>
+          <h1>HangFire</h1>
           <p>Background job processing for ASP.NET applications</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/odinserj">odinserj</a></span>
