--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
 
 <p>During the installation of the HangFire package, the <code>App_Start\HangFireConfig.cs</code> file appears in your project. This file contains the instructions to run the HangFire Server during the start-up of your ASP.NET application with the default options. Just build your project and open the following URL in a browser:</p>
 
-<div style="border-radius: 0;border:solid 3px #ccc;background-color:#fcfcfc;box-shadow: 1px 1px 1px #ddd inset, 1px 1px 1px #eee;padding:3px 7px;">
+<div style="color:#333;border-radius: 0;border:solid 3px #ccc;background-color:#fcfcfc;box-shadow: 1px 1px 1px #ddd inset, 1px 1px 1px #eee;padding:3px 7px;">
 <span style="color: #666;">http://&lt;your-site&gt;</span>/hangfire.axd
 </div>
+<br/>
 
 <p>If you see a page like this, then the configuration step is finished. To learn more about configuration or if you do not see that page, the <a href="">Configuration page</a> in the documentation, especially its Troubleshooting section.</p>
 
