--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>HangFire by odinserj</title>
+    <title>HangFire</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -32,16 +32,16 @@
       <section>
         <div id="title">
           <h1>HangFire</h1>
-          <p>Background job processing for ASP.NET applications</p>
+          <p>Simple, efficient and transparent background job processing <br/> for ASP.NET applications</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/odinserj">odinserj</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Modified theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         <h1>
 <a name="hangfire" class="anchor" href="#hangfire"><span class="octicon octicon-link"></span></a>HangFire</h1>
 
-<p>HangFire provides support for performing <strong>background jobs in ASP.NET applications</strong>. It allows you to define those jobs and process them asynchronously. HangFire helps you to move the long running tasks out of the request processing pipeline, for example:</p>
+<p>HangFire provides support for simple, efficient and transparent <strong>background job processing for ASP.NET applications</strong>. It helps you to define, create and process these jobs asynchronously. Move your long running tasks out of the request processing pipeline without losing control over them!</p>
 
 <ul>
 <li>Mass newsletter</li>
@@ -57,13 +57,13 @@
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>HangFire stores its data in the Redis server instance, so you need to install it first. To learn different options and their pros and cons, see the <a href="">Installing Redis</a> page in the documentation. But for now we'll install it using the simplest method through the NuGet Package Manager Console:</p>
+<p>HangFire stores its data in the Redis server instance, so you need to install it first. To learn different options, see <em>Redis installation</em> section of the <a href="https://github.com/odinserj/HangFire/wiki/Installation">Installation page</a> in the documentation. But for now we'll install it using the simplest method through the NuGet Package Manager Console:</p>
 
 <pre style="background-color: #202020;border: 4px solid silver;border-radius: 3px;color: #E2E2E2;display: block;padding: 10px;">PM&gt; Install-Package Redis-32</pre>
 
 <p>Package Manager will install the Redis binaries to the <code>&lt;project-folder&gt;\packages\redis-32.&lt;*&gt;\tools</code> folder. Just open this folder and run the <code>redis-server.exe</code> program.</p>
 
-<p>Next, install the HangFire into your <strong>ASP.NET application</strong> using the Package Manager again:</p>
+<p>Next, install the HangFire into your <strong>ASP.NET application</strong> using the Package Manager Console again:</p>
 
 <pre style="background-color: #202020;border: 4px solid silver;border-radius: 3px;color: #E2E2E2;display: block;padding: 10px;">PM&gt; Install-Package HangFire</pre>
 
@@ -77,7 +77,7 @@
 </div>
 <br/>
 
-<p>If you see a page like this, then the configuration step is finished. To learn more about configuration or if you do not see that page, the <a href="">Configuration page</a> in the documentation, especially its Troubleshooting section.</p>
+<p>If you see a page like this, then the configuration step is finished. Otherwise, please refer to the <a href="https://github.com/odinserj/HangFire/wiki/Installation">Troubleshooting page</a> in the documentation.</p>
 
 <p><img src="https://github.com/odinserj/hangfire/raw/master/Examples/dashboard_min.png" alt="HangFire Dashboard"></p>
 
@@ -104,7 +104,7 @@
 <span class="p">}</span>
 </pre></div>
 
-<p>To learn more about job classes, see the <a href="">Defining Jobs page</a> in the documentation.</p>
+<p>To learn more about job classes, see the <a href="https://github.com/odinserj/HangFire/wiki/Defining-jobs">Defining Jobs page</a> in the documentation.</p>
 
 <h3>
 <a name="2-create-a-job" class="anchor" href="#2-create-a-job"><span class="octicon octicon-link"></span></a>2. Create a job</h3>
@@ -119,7 +119,7 @@
 <div class="highlight highlight-csharp"><pre><span class="n">Perform</span><span class="p">.</span><span class="n">In</span><span class="p">&lt;</span><span class="n">LongRunningJob</span><span class="p">&gt;(</span><span class="n">TimeSpan</span><span class="p">.</span><span class="n">FromDays</span><span class="p">(</span><span class="m">1</span><span class="p">),</span> <span class="k">new</span> <span class="p">{</span> <span class="n">Name</span> <span class="p">=</span> <span class="s">"man"</span> <span class="p">});</span>
 </pre></div>
 
-<p>To learn more about different options of the job creation process, see the <a href="">corresponding page</a> in the documentation.</p>
+<p>To learn more about different options of the job creation process, see the <a href="https://github.com/odinserj/HangFire/wiki/Creating-jobs">corresponding page</a> in the documentation.</p>
 
 <h3>
 <a name="3-start-the-processing" class="anchor" href="#3-start-the-processing"><span class="octicon octicon-link"></span></a>3. Start the processing</h3>
@@ -130,17 +130,16 @@
 <span class="n">server</span><span class="p">.</span><span class="n">Start</span><span class="p">();</span>
 </pre></div>
 
-<p>You can find more information about the <a href="">HangFire Server</a> in the documentation.</p>
+<p>You can find more information about the <a href="https://github.com/odinserj/HangFire/wiki/Performing-jobs">HangFire Server</a> in the documentation.</p>
 
 <h2>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>Please see the LICENSE.txt file for licensing details.</p>
+<p>Copyright © 2013 Sergey Odinokov.</p>
+<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.</p>
+<p>You should have received a copy of the GNU Lesser General Public License along with this program. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</p>
 
-<h2>
-<a name="author" class="anchor" href="#author"><span class="octicon octicon-link"></span></a>Author</h2>
-
-<p>Sergey Odinokov, odinserj (at) gmail (dot) com</p>
       </section>
 
     </div>
