--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: HangFire – Background job processing for ASP.NET
         <div class="row">
             <div class="col-md-7">
                 <h1>HangFire</h1>
-                <p>A simple way to kick off long-running processes from the ASP.NET request processing pipeline.</p>
+                <p>A simple way to kick off long-running processes from the ASP.NET request processing pipeline, backed by SQL Server or Redis.</p>
             </div>
             <div class="col-md-5">
                 <div id="screenshots" class="carousel slide pull-right" data-ride="carousel">
