--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@ title: HangFire – Background job processing for ASP.NET
         <div class="col-md-12" style="text-align: center;">
             <hr>
             <div>
-                <a class="btn btn-default btn-lg" href="/features">Features</a>
+                <a class="btn btn-primary btn-lg" href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a>
                 <span class="btn btn-lg">or</span>
-                <a class="btn btn-primary btn-lg" href="https://github.com/odinserj/HangFire/blob/master/README.md">Getting Started</a>
+                <a class="btn btn-default btn-lg" href="http://docs.hangfire.io/en/latest/features.html">Features</a>
             </div>
         </div>
     </div>
