Link to NuGet package

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: HangFire – Background job processing for ASP.NET
             <div class="col-md-7">
                 <h1>HangFire</h1>
                 <p>A simple way to kick off long-running processes from the ASP.NET request processing pipeline, backed by SQL Server or Redis.</p>
+                <p><a href="https://nuget.org/packages/HangFire">Install via NuGet</a></p>
             </div>
             <div class="col-md-5 visible-md visible-lg">
                 <div id="screenshots" class="carousel slide pull-right" data-ride="carousel">
