--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ title: HangFire – Background job processing for ASP.NET
                 <p>
                     <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">Install via NuGet</a>
                     <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork on GitHub</a>
+                    <span class="main-twitter-button">
+                        <a href="https://twitter.com/hangfire_net" class="twitter-follow-button" data-show-count="false">Follow @hangfire_net</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                    </span>
                 </p>
             </div>
             <div class="col-md-5 visible-md visible-lg">
