--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: HangFire – Background job processing for ASP.NET
                 <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by SQL Server or Redis.</p>
                 <p>
                     <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">NuGet Package</a>
-                    <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork on GitHub</a>
+                    <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork me on GitHub</a>
                 </p>
             </div>
             <div class="col-md-5 visible-md visible-lg">
