Point to a new discussion site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: HangFire – Background job processing for ASP.NET
                 <h1>HangFire</h1>
                 <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by SQL Server or Redis.</p>
                 <p>
-                    <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">NuGet Package</a>
+                    <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">Install NuGet Package</a>
                     <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork me on GitHub</a>
                 </p>
             </div>
@@ -197,7 +197,7 @@ PM> Install-Package HangFire</pre>
             <div>
                 <a class="btn btn-primary btn-lg" href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a>
                 <span class="btn btn-lg">or</span>
-                <a class="btn btn-default btn-lg" href="http://docs.hangfire.io/en/latest/features.html">Features</a>
+                <a class="btn btn-default btn-lg" href="http://docs.hangfire.io">Documentation</a>
             </div>
         </div>
     </div>
