Added MSMQ note

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: HangFire – Background job processing for ASP.NET
         <div class="row">
             <div class="col-md-7">
                 <h1>HangFire</h1>
-                <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by SQL Server or Redis.</p>
+                <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by Redis, SQL Server or MSMQ.</p>
                 <p>
                     <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">Install NuGet Package</a>
                     <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork me on GitHub</a>
