New screenshots for HangFire

--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@ title: HangFire – Background job processing for ASP.NET
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/dashboard.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/dashboard-sm.png" alt="HangFire Dashboard">
+                            <a href="/img/dashboard.png">
+                                <img src="/img/dashboard-sm.png" alt="HangFire Dashboard">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/succeeded-job.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/succeeded-job-sm.png" alt="HangFire Succeeded Job">
+                            <a href="/img/succeeded-job.png">
+                                <img src="/img/succeeded-job-sm.png" alt="HangFire Succeeded Job">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/failed-job.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/failed-job-sm.png" alt="HangFire Failed Job">
+                            <a href="/img/failed-job.png">
+                                <img src="/img/failed-job-sm.png" alt="HangFire Failed Job">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/failed-jobs.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/failed-jobs-sm.png" alt="HangFire Failed Job List">
+                            <a href="/img/succeeded-jobs.png">
+                                <img src="/img/succeeded-jobs-sm.png" alt="HangFire Succeeded Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/queues.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/queues-sm.png" alt="HangFire Queue List">
+                            <a href="/img/failed-jobs.png">
+                                <img src="/img/failed-jobs-sm.png" alt="HangFire Failed Job List">
                             </a>
                         </div>
                         <div class="item">
-                            <a href="https://raw.githubusercontent.com/odinserj/HangFire/master/content/processing-jobs.png">
-                                <img src="https://raw.githubusercontent.com/odinserj/HangFire/master/content/processing-jobs-sm.png" alt="HangFire Performing Job List">
+                            <a href="/img/queues.png">
+                                <img src="/img/queues-sm.png" alt="HangFire Queue List">
                             </a>
-                        </div>
+                        </div>                        
                     </div>
 
                     <!-- Controls -->
