Add social buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@ title: HangFire – Background job processing for ASP.NET
             <div class="col-md-7">
                 <h1>HangFire</h1>
                 <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
-                <p>
-                    <a class="btn btn-primary" href="https://nuget.org/packages/HangFire">Install NuGet Package</a>
-                    <a class="btn btn-default" href="https://github.com/odinserj/HangFire"><img style="vertical-align: text-top;" width="16" src="/img/GitHub-Mark-32px.png"> Fork me on GitHub</a>
+                <p style="font-size: inherit;">
+                    <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="83" height="20"></iframe>
+
+                    <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&type=follow&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
+
+                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </p>
             </div>
             <div class="col-md-5 visible-md visible-lg">
