--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@ title: HangFire – Background job processing for ASP.NET
                 <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
                 <p style="font-size: inherit;">
                     <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="83" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
 
                     <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&type=follow&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
+  allowtransparency="true" frameborder="0" scrolling="0" width="146" height="20"></iframe>
 
+                    <a href="https://news.ycombinator.com/submit" class="hn-button" data-title="HangFire – Reliable and transparent background job processing for ASP.NET" data-url="http://hangfire.io" data-count="horizontal" data-style="twitter">Vote on Hacker News</a>
+<script type="text/javascript">var HN=[];HN.factory=function(e){return function(){HN.push([e].concat(Array.prototype.slice.call(arguments,0)))};},HN.on=HN.factory("on"),HN.once=HN.factory("once"),HN.off=HN.factory("off"),HN.emit=HN.factory("emit"),HN.load=function(){var e="hn-button.js";if(document.getElementById(e))return;var t=document.createElement("script");t.id=e,t.src="//hn-button.herokuapp.com/hn-button.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n)},HN.load();</script>
+&nbsp;
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </p>
