--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ title: HangFire – Background job processing for ASP.NET
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </p>
             </div>
-            <div class="col-md-5 visible-md visible-lg">
-                <div id="screenshots" class="carousel slide pull-right" data-ride="carousel">
+            <div class="col-md-5">
+                <div id="screenshots" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#screenshots" data-slide-to="0" class="active"></li>
@@ -102,7 +102,7 @@ PM> Install-Package HangFire</pre>
     _server.Start();
 }</pre>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 hidden-xs">
             <a height="354" class="twitter-timeline" href="https://twitter.com/hangfire_net" data-widget-id="451027617567621120">Твиты пользователя @hangfire_net</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
