Another fix for mobiles

--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@ PM> Install-Package HangFire</pre>
             <hr>
             <div>
                 <a class="btn btn-primary btn-lg" href="http://docs.hangfire.io/en/latest/quickstart.html">Quick Start</a>
+                <br class="visible-xs">
                 <span class="btn btn-lg">or</span>
+                <br class="visible-xs">
                 <a class="btn btn-default btn-lg" href="http://docs.hangfire.io">Documentation</a>
             </div>
         </div>
