Add cosmetic ellipsis

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ title: HangFire – Background job processing for ASP.NET
 
         </div>
         <div class="col-md-4">
-            <h3>Run them inside ASP.NET app</h3>
-            <p><em>Forget about AppDomain unloads – HangFire is reliable for ASP.NET from scratch.</em></p>
+            <h3>Run them inside ASP.NET app…</h3>
+            <p><em>Forget about AppDomain unloads, Web Garden &amp; Web Farm issues – HangFire is reliable for ASP.NET from scratch.</em></p>
 <pre><span class="keywd">var</span> server = 
   <span class="keywd">new</span> <span class="type">AspNetBackgroundJobServer</span>();
 server.Start();</pre>
