--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: HangFire – Background job processing for ASP.NET
         <div class="row">
             <div class="col-md-7">
                 <h1>HangFire</h1>
-                <p>A reliable way to kick off long-running processes from the ASP.NET request processing pipeline, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
+                <p>A reliable way to process fire-and-forget, delayed and recurring tasks inside ASP.NET application, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
                 <p style="font-size: inherit;">
                     <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
   allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
