Facebook share button

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@ title: HangFire – Background job processing for ASP.NET
                 <h1>HangFire</h1>
                 <p>A reliable way to process fire-and-forget, delayed and recurring tasks inside ASP.NET application, backed by Redis, SQL Server, SQL Azure or MSMQ.</p>
                 <p style="font-size: inherit;">
-                    <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="85" height="20"></iframe>
 
-                    <!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
+<span class="fb-share-button" data-href="http://hangfire.io" data-type="button_count"></span>
+
+<!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
 <span class="g-plusone" data-size="medium"></span>
+
+                    <iframe src="http://ghbtns.com/github-btn.html?user=odinserj&repo=HangFire&type=watch&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 
 <!-- Поместите этот тег за последним тегом виджета кнопка +1. -->
 <script type="text/javascript">
@@ -28,6 +31,7 @@ title: HangFire – Background job processing for ASP.NET
 
                     <a href="https://twitter.com/share" class="twitter-share-button" data-via="hangfire_net">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
                 </p>
             </div>
             <div class="col-md-5">
